[package]
name = "rtpproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
prost = "0.13"
bytes = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
dashmap = "6.1"
async-trait = "0.1"
chrono = "0.4"

[build-dependencies]
tonic-build = "0.12"
